tests/ui/cilk/cilk_for_else.stderr
error: `for...else` loops are not supported
  --> $DIR/cilk_for_else.rs:13:7
   |
LL |       cilk_for i in 1..10 {
   |       -------- `else` is attached to this loop
LL |           sum.fetch_add(i, std::sync::atomic::Ordering::Relaxed);
LL |       } else {
   |  _______^
LL | |         panic!("shouldn't get here!");
LL | |     }
   | |_____^
   |
   = note: consider moving this `else` clause to a separate `if` statement and use a `bool` variable to control if it should run

error: aborting due to 1 previous error

